# document-anonymizer

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE_REFACTOR_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.yaml  install.sh  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
examples/: README.md  basic_usage.py  batch_processing.py
src/document_anonymizer/: __init__.py  anonymization_engine.py  cli.py  constants.py  document_anonymizer.py  dummy_generator.py  field_detector.py  image_masker.py  llm_classifier.py  ocr_processor.py  pdf_handler.py  report_generator.py  text_renderer.py  utils.py  verification.py
src/document_anonymizer/config/: masking_rules.yaml
src/document_anonymizer/prompts/: README.md  sensitive_field_detector.md
tests/: __init__.py  conftest.py  test_anonymization_engine.py  test_document_anonymizer.py  test_dummy_generator.py  test_field_detector.py  test_image_masker.py  test_llm_detector.py  test_ocr_processor.py  test_pdf_handler.py  test_report_generator.py  test_text_renderer.py  test_verification.py
